--- a/app/views/toppages/home.html.erb
+++ b/app/views/toppages/home.html.erb
@@ -1,2 +1,12 @@
-<% provide(:title, "Home") %>
+
 <h1>Share Images</h1>
+
+<div class="center jumbotron">
+  <h2>
+    This is the home page for the
+    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
