--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,2 +1,52 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
+// signup
+.signup {
+  border: 1px solid gray;
+  border-radius: 20px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  h2 {
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+  }
+  p {
+    font-size: 20px;
+    color: gray;
+    margin: 30px 0;
+    text-align: center;
+  }
+  input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@media all and (min-width: 740px) {
+  .signup {
+    width: 360px;
+    padding: 20px 40px;
+  }
+}
+
+@media all and (min-width: 1025px) {
+  
+}
