--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,7 +17,7 @@
 }
 
 // signup
-.signup {
+.signup, .login {
   border: 1px solid gray;
   border-radius: 20px;
   width: 100%;
@@ -27,11 +27,11 @@
     font-size: 40px;
     font-weight: bold;
     text-align: center;
+    margin-bottom: 30px;
   }
-  p {
+  h2 + p {
     font-size: 20px;
     color: gray;
-    margin: 30px 0;
     text-align: center;
   }
   input {
@@ -41,7 +41,7 @@
 }
 
 @media all and (min-width: 740px) {
-  .signup {
+  .signup, .login {
     width: 360px;
     padding: 20px 40px;
   }
