--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,10 @@
 <% provide(:title, 'Sign up') %>
-
+<% provide(:button_text, '新規登録') %>
+<% provide(:url, signup_path) %>
 <div class="signup">
   <h2>Share Images</h2>
   <p>登録して画像をshareしよう</p>
-  <%= form_with(model: @user, url: signup_path, local: true) do |f| %>
-    
-    <%= render 'shared/error_messages' %>
-    
-    <%= f.text_field :name, class: 'form-control', placeholder: "名前" %>
-
-    <%= f.email_field :email, class: 'form-control', placeholder: "メールアドレス" %>
-
-    <%= f.password_field :password, class: 'form-control', placeholder: "パスワード" %>
-
-    <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "パスワード確認" %>
-    <%= f.submit "新規登録", class: "btn btn-primary" %>
-  <% end %>
+  <%= render "form" %>
   <p>アカウントをすでにお持ちですか? <%= link_to "ログイン", login_path %></p>
 </div>
 
